--- a/bin/styles/estilos.css
+++ b/bin/styles/estilos.css
@@ -24,3 +24,10 @@
 .svgLeft {
     border-bottom-right-radius: 100px;
 }
+
+.tHead {
+    color: rgb(0, 0, 0);
+    font-family: cursive;
+    font-size: 25px;
+    z-index: 100px;
+}
