--- a/bin/styles/estilos.css
+++ b/bin/styles/estilos.css
@@ -14,6 +14,13 @@
     margin: 60px auto;
 }
 
+.registroVentana {
+    border-color: #4A4A4A;
+    background-color: rgb(83, 83, 83);
+    color: white;
+    align-items: center;
+}
+
 .heider {
     font-family: cursive;
     text-shadow: 5px 5px 5px black;
@@ -29,5 +36,31 @@
     color: rgb(0, 0, 0);
     font-family: cursive;
     font-size: 25px;
-    z-index: 100px;
+    padding: 15px;
+}
+
+.rows {
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: 20px;
+    font-family: cursive;
+
+}
+
+.tabla {
+    border-color: #ec1cce;
+}
+
+.nuevoUsuario {
+    align-items: end;
+    color: #fafafa;
+    font-family: cursive;
+    text-align: center;
+}
+
+.buscarName {
+    color: blue;
+    width: 200;
+    height: 35;
+
 }
