--- a/bin/styles/estilos.css
+++ b/bin/styles/estilos.css
@@ -39,13 +39,13 @@
     padding: 15px;
 }
 
-.rows {
+/* .rows {
 
     text-align: center;
     font-size: 20px;
     font-family: cursive;
 
-}
+} */
 
 /* 
 .nuevoUsuario {
